--- a/src/app/fixed/top-header/top-header.component.css
+++ b/src/app/fixed/top-header/top-header.component.css
@@ -1,31 +1,32 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:700');
 
 .topnav {
-  height: 10vh;
-  width: 100vw;
-  border-bottom: 1px solid lightgrey;
+  width: 100%;
+  height: 10%;
+  border-bottom:none;
   top: 0;
   position: fixed;
-  background-color: white;
   padding-top: 3vh;
+  background: white;
+
 }
 
 .topnav a {
-  margin-left: 30px;
+  margin-left: 2vw;
   text-decoration: none;
-  font-family: 'Source Code Pro', monospace;
-  font-size: 40px;
-  color: white;
-  font-weight: 400;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 35px;
+  color: 	#7530E5;
 	line-height: 30px;
-  background: #00cc00;
-}
-
-.topnav #options {
-  float: right;
+  /*background: #00cc00;*/
 }
 
 .topnav i {
-  margin-right: 50px;
-  font-size: 200%;
+  margin-right: 5vw;
+  font-size: 180%;
+  color: #A33888;
+}
+
+i:hover {
+  cursor: pointer;
 }
