--- a/src/app/users/authentication/authentication.component.html
+++ b/src/app/users/authentication/authentication.component.html
@@ -18,7 +18,7 @@
                     <label for="checkbox1">Remember Me</label>
                   </div>
                   <div class="col-xs-6 form-group pull-right">
-                        <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
+                        <input type="submit" (click)="login()" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
                   </div>
               </form>
               <form id="register-form" action="#" method="post" role="form" *ngIf="isRegister">
@@ -38,7 +38,7 @@
                   <div class="form-group">
                     <div class="row">
                       <div class="col-sm-6 col-sm-offset-3">
-                        <input type="submit" name="register-submit" id="register-submit" tabindex="4" (click)="addUser()" class="form-control btn btn-register" value="Register Now">
+                        <input type="submit" name="register-submit" id="register-submit" tabindex="4" (click)="register()" class="form-control btn btn-register" value="Register Now">
                       </div>
                     </div>
                   </div>
