--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 
 body {
-  background-color: white;
   font-family: 'Lato', sans-serif;
   padding-top: 10px;
   width: 100%;
   height: 100%;
-
+  background: #F0F0F0;
 }
 
 #loading {
