attempted authentication but bad request when trying to register + change styling

--- a/src/app/fixed/side-bar/side-bar.component.css
+++ b/src/app/fixed/side-bar/side-bar.component.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 #sidebar-wrapper {
+  background-color: white;
   position: fixed;
   float: left;
   margin-left: 0px;
@@ -58,9 +59,7 @@ div.input-mask {
 /**
  * Sidebar
  */
-#sidebar-wrapper {
-  background: white;
-}
+
 ul.sidebar .sidebar-main a,
 .sidebar-footer,
 ul.sidebar .sidebar-list a:hover,
