--- a/src/app/fixed/top-header/top-header.component.html
+++ b/src/app/fixed/top-header/top-header.component.html
@@ -1,15 +1,17 @@
-<nav class="navbar-default navbar topnav">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a href="#">justForex</a>
-    </div>
+<div id="topnav">
+  <nav class="navbar-default navbar navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a href="#">justForex</a>
+      </div>
 
-    <div class="navbar-right">
-      <i class="fa fa-inbox" aria-hidden="true" routerLink="/chat"></i>
-      <i class="fa fa-bell" aria-hidden="true" routerLink="/authentication"></i>
-      <i class="fa fa-info" aria-hidden="true"></i> <!-- info -->
-      <i class="fa fa-cog" aria-hidden="true"></i> <!-- settings -->
-      <i class="fa fa-user" aria-hidden="true" routerLink="/myprofile"></i> <!-- account -->
+      <div class="navbar-right">
+        <i class="fa fa-inbox" aria-hidden="true" routerLink="/chat"></i>
+        <i class="fa fa-bell" aria-hidden="true" routerLink="/authentication"></i>
+        <i class="fa fa-info" aria-hidden="true"></i> <!-- info -->
+        <i class="fa fa-cog" aria-hidden="true"></i> <!-- settings -->
+        <i class="fa fa-user" aria-hidden="true" routerLink="/myprofile"></i> <!-- account -->
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
+</div>
