--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="background">
+<div class="container background">
   <top-header></top-header>
   <div class="body">
     <side-bar></side-bar>
