--- a/src/styles.css
+++ b/src/styles.css
@@ -3,9 +3,10 @@
 body {
   font-family: 'Lato', sans-serif;
   padding-top: 10px;
-  width: 100%;
+  /*margin:0 auto;
+  text-align:center;*/
   height: 100%;
-  background: #F0F0F0;
+  background: #F6F6F6;
 }
 
 #loading {
