--- a/src/app/projectsFolder/graphs/graphs.component.html
+++ b/src/app/projectsFolder/graphs/graphs.component.html
@@ -2,27 +2,51 @@
 <!-- <div [ng2-highstocks]="" class="graph"></div> -->
 <!-- <div [ng2-highcharts]="vot"></div>
 <div [ng2-highcharts]="wl"></div> -->
-<div [ng2-highcharts]="ttpc"></div>
-<div [ng2-highcharts]="stpc"></div>
-<div [ng2-highcharts]="btpc"></div>
 
-<p class="note">
-  Your deployment of Angular 2 Seed worked perfectly!
-  Click <em>about (above)</em> to get your reward!
-</p>
+<!--<div [ng2-highcharts]="ttpc"></div>-->
+<!--<div [ng2-highcharts]="stpc"></div>-->
+<!--<div [ng2-highcharts]="btpc"></div>-->
 
-<table width="100%">
-	<tr>
-		<td width="50%">
+<!--<p class="note">-->
+  <!--Your deployment of Angular 2 Seed worked perfectly!-->
+  <!--Click <em>about (above)</em> to get your reward!-->
+<!--</p>-->
+
+<!--<table width="100%">-->
+	<!--<tr>-->
+		<!--<td width="50%">-->
+			<!--<div [ng2-highcharts]="chartOptions" class="graph"></div>-->
+		<!--</td>-->
+		<!--<td width="50%">-->
+			<!--<div [ng2-highcharts]="chartBar" class="graph"></div>-->
+		<!--</td>-->
+	<!--</tr>-->
+	<!--<tr>-->
+		<!--<td width="50%">-->
+			<!--<div [ng2-highstocks]="chartStock" class="graph"></div>-->
+		<!--</td>-->
+	<!--</tr>-->
+<!--</table>-->
+
+<div class="container">
+	<div class="row">
+		<div class="col-sm-6 col-md-6">
 			<div [ng2-highcharts]="chartOptions" class="graph"></div>
-		</td>
-		<td width="50%">
+		</div>
+		<div class="col-sm-6 col-md-6">
 			<div [ng2-highcharts]="chartBar" class="graph"></div>
-		</td>
-	</tr>
-	<tr>
-		<td width="50%">
+		</div>
+		<div class="col-sm-6 col-md-6">
 			<div [ng2-highstocks]="chartStock" class="graph"></div>
-		</td>
-	</tr>
-</table>
+		</div>
+		<div class="col-sm-6 col-md-6">
+			<div [ng2-highcharts]="ttpc"></div>
+		</div>
+		<div class="col-sm-6 col-md-6">
+			<div [ng2-highcharts]="stpc"></div>
+		</div>
+		<div class="col-sm-6 col-md-6">
+			<div [ng2-highcharts]="btpc"></div>
+		</div>
+	</div>
+</div>
