--- a/src/app/users/chat/chat.component.html
+++ b/src/app/users/chat/chat.component.html
@@ -1,5 +1,3 @@
-<h1 *ngFor="let t of text">{{t}}</h1>
-<form (keydown)="keyDownFunction($event)">
-  <input  placeholder="Type your message here" [(ngModel)]="typed" >
-  <button (click)="bid()">Send Message</button>
-</form>
+<div>
+  <chat-page></chat-page>
+</div>
