--- a/src/app/users/authentication/authentication.component.html
+++ b/src/app/users/authentication/authentication.component.html
@@ -8,10 +8,10 @@
               <form id="login-form" action="#" method="post" role="form" style="display: block;" *ngIf="!isRegister">
                 <h2>LOGIN</h2>
                   <div class="form-group">
-                    <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+                    <input type="text" name="username" id="username" [(ngModel)]="username" tabindex="1" class="form-control" placeholder="Username" value="">
                   </div>
                   <div class="form-group">
-                    <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
+                    <input type="password" [(ngModel)]="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
                   </div>
                   <div class="col-xs-6 form-group pull-left checkbox">
                     <input id="checkbox1" type="checkbox" name="remember">
