--- a/src/app/fixed/top-header/top-header.component.html
+++ b/src/app/fixed/top-header/top-header.component.html
@@ -1,6 +1,9 @@
+<div class="container">
+
+
 <div id="topnav">
   <nav class="navbar-default navbar navbar-fixed-top">
-    <div class="container-fluid">
+    <div class="container">
       <div class="navbar-header">
         <a href="#">justForex</a>
       </div>
@@ -14,4 +17,5 @@
       </div>
     </div>
   </nav>
+</div>
 </div>
