[dg] made graphs responsive

--- a/src/app/projectsFolder/graphs/graphs.component.html
+++ b/src/app/projectsFolder/graphs/graphs.component.html
@@ -31,10 +31,10 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-6 col-md-6">
-			<div [ng2-highcharts]="chartOptions" class="graph"></div>
+			<div [ng2-highstocks]="chartOptions" class="graph"></div>
 		</div>
 		<div class="col-sm-6 col-md-6">
-			<div [ng2-highcharts]="chartBar" class="graph"></div>
+			<div [ng2-highstocks]="chartBar" class="graph"></div>
 		</div>
 		<div class="col-sm-6 col-md-6">
 			<div [ng2-highstocks]="chartStock" class="graph"></div>
