--- a/src/app/fixed/top-header/top-header.component.css
+++ b/src/app/fixed/top-header/top-header.component.css
@@ -1,8 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Space+Mono:400');
 
+@media screen and (max-width: 770px) {
+  .navbar-right {
+    display: none;
+  }
+}
+
 #topnav .navbar {
   width: 100%;
   height: 12%;
+  margin-bottom: 0;
   border-bottom:none;
   border-bottom: 0.3vh solid lightgrey;
   padding-top: 3.5vh;
@@ -28,7 +35,10 @@
   font-size: 2vh;
   font-size: 2vw;
   color: #913D88;
+}
 
+#topnav .navbar i .collapse {
+  color: white;
 }
 
 i:hover {
