--- a/src/app/fixed/top-header/top-header.component.html
+++ b/src/app/fixed/top-header/top-header.component.html
@@ -1,9 +1,20 @@
-<div class="container">
+<!-- <div class="container"> -->
 
 
 <div id="topnav">
   <nav class="navbar-default navbar navbar-fixed-top">
     <div class="container">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topnav" aria-expanded="false" aria-controls="topnav">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button> -->
       <div class="navbar-header">
         <a href="#">justForex</a>
       </div>
@@ -18,4 +29,4 @@
     </div>
   </nav>
 </div>
-</div>
+<!-- </div> -->
