--- a/src/app/projectsFolder/editor/editor.component.html
+++ b/src/app/projectsFolder/editor/editor.component.html
@@ -1,44 +1,33 @@
 <div class="code-editor">
   <!-- Navbar to select language options -->
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-left">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">LANGUAGES<span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a (click)="changeLanguage('ruby')">Ruby</a></li>
-              <li><a (click)="changeLanguage('javascript')">JavaScript</a></li>
-              <li><a (click)="changeLanguage('python')">Python</a></li>
-              <li role="separator" class="divider"></li>
-              <li><div class="glyphicon glyphicon-plus"></div>Add New</li>
-            </ul>
-          </li>
-
-          <li><a href="#">{{lang}}</a></li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+  <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="#">{{lang}}</a>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Languages
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item"  (click)="changeLanguage('ruby')">Ruby</a>
+            <a class="dropdown-item" (click)="changeLanguage('javascript')">JavaScript</a>
+            <a class="dropdown-item" (click)="changeLanguage('python')">Python</a>
+          </div>
+        </li>
+      </ul>
+        <form class="form-inline">
+          <button class="btn btn-outline-success" (click)="addTask($event)" type="button">Save</button>
+          <button routerLink="/graphs" class="btn btn-sm align-middle btn-outline-secondary" type="button">Run Backtest</button>
+        </form>
+    </div>
   </nav>
     <!-- The ace editor -->
     <ace-editor class="ace"
      [(text)]="text"
      #editor></ace-editor>
 
-
-  <!-- Buttons that allow saving and running the tests -->
-  <nav class="navbar navbar-default navbar-fixed-bottom">
-    <div class="container-fluid">
-     <span class="navbar-center">
-       <button class="btn btn-default" (click)="addTask($event)">
-         Save
-       </button>
-       <button class="btn btn-default">
-         <a routerLink="/graphs">Run Backtest</a>
-       </button>
-     </span>
-    </div><!-- /.container-fluid -->
-  </nav>
   <!-- Buttons that allow saving and running the tests -->
 </div>
