--- a/src/app/projectsFolder/myproject/myproject.component.css
+++ b/src/app/projectsFolder/myproject/myproject.component.css
@@ -1,6 +1,7 @@
 .project-box {
   width: 200px;
   height: 100%;
+  background-color: var(--white);
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   float: left;
@@ -16,4 +17,10 @@
 /* Add some padding inside the card container */
 .container {
     padding: 2px 16px;
+}
+
+button {
+  background-color: var(--green);
+  color: var(--white);
+  border: none;
 }
