--- a/src/app/users/dashboard/dashboard.component.html
+++ b/src/app/users/dashboard/dashboard.component.html
@@ -1,38 +1,50 @@
 <div class="row">
   <div class="col-sm-3">
-    <div class="card">
+    <div class="project-box panel panel-default">
+      <div class="container">
+        <h4><b>Name</b></h4>
+        <p>Lang</p>
+        <p>Last modified:</p>
+        <button class="btn btn-default">Test</button>
+        <button class="btn btn-default">View</button>
+      </div>
     </div>
   </div>
+
   <div class="col-sm-3">
-    <div class="card">
+    <div class="project-box panel panel-default">
+      <div class="container">
+        <h4><b>Name</b></h4>
+        <p>Lang</p>
+        <p>Last modified:</p>
+        <button class="btn btn-default">Test</button>
+        <button class="btn btn-default">View</button>
+      </div>
     </div>
   </div>
+
   <div class="col-sm-3">
-    <div class="card">
+    <div class="project-box panel panel-default">
+      <div class="container">
+        <h4><b>Name</b></h4>
+        <p>Lang</p>
+        <p>Last modified:</p>
+        <button class="btn btn-default">Test</button>
+        <button class="btn btn-default">View</button>
+      </div>
     </div>
   </div>
+
   <div class="col-sm-3">
-    <div class="card">
+    <div class="project-box panel panel-default">
+      <div class="container">
+        <h4><b>Name</b></h4>
+        <p>Lang</p>
+        <p>Last modified:</p>
+        <button class="btn btn-default">Test</button>
+        <button class="btn btn-default">View</button>
+      </div>
     </div>
   </div>
-  <div class="col-sm-3">
-    <div class="card">
-    </div>
-  </div>
-  <div class="col-sm-3">
-    <div class="card">
-    </div>
-  </div>
-  <div class="col-sm-3">
-    <div class="card">
-    </div>
-  </div>
-  <div class="col-sm-3">
-    <div class="card">
-    </div>
-  </div>
-  <div class="col-sm-3">
-    <div class="card">
-    </div>
-  </div>
+
 </div>
