[dg] make a collapsable nav bar

--- a/src/app/fixed/side-bar/side-bar.component.html
+++ b/src/app/fixed/side-bar/side-bar.component.html
@@ -1,3 +1,6 @@
+<div class="container">
+
+
   <div id="sidebar-wrapper" (click)='toggleMenu()' [@slideInOut]="menuState">
 
       <ul class="sidebar">
@@ -37,3 +40,4 @@
       </button>
 
     </div>
+</div>
