--- a/src/app/projectsFolder/editor/editor.component.html
+++ b/src/app/projectsFolder/editor/editor.component.html
@@ -1,7 +1,7 @@
 <div class="code-editor">
   <!-- Navbar to select language options -->
   <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
+    <div class="container">
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-left">
@@ -22,9 +22,12 @@
     </div><!-- /.container-fluid -->
   </nav>
     <!-- The ace editor -->
-    <ace-editor class="ace"
-     [(text)]="text"
-     #editor></ace-editor>
+    <!-- <div class="container"> -->
+      <ace-editor class="ace"
+       [(text)]="text"
+       #editor></ace-editor>
+    <!-- </div> -->
+
 
 
   <!-- Buttons that allow saving and running the tests -->
