--- a/src/app/fixed/side-bar/side-bar.component.css
+++ b/src/app/fixed/side-bar/side-bar.component.css
@@ -5,11 +5,11 @@
   position: fixed;
   float: left;
   margin-left: 0px;
-  margin-top: -1.8%;
+  margin-top: 0%;
   font-family: 'Montserrat', sans-serif;
   left: 0px;
   width: 20vw;
-  height: 100vh;
+  height: 100%;
   z-index: 999;
 }
 
@@ -84,9 +84,12 @@ ul.sidebar li a {
   float: left;
   text-decoration: none;
   width: 250px;
+  width: 4vw;
 }
 ul.sidebar .sidebar-main {
-  height: 65px;
+  /*height: 65px;
+  height: 10vh;*/
+  height: 100%;
 }
 ul.sidebar .sidebar-main a {
   font-size: 18px;
@@ -103,9 +106,11 @@ ul.sidebar .sidebar-main .menu-icon {
 }
 ul.sidebar .sidebar-title {
   color: #A33888;
-  font-size: 1.1em;
+  /*font-size: 1.1em;
+  font-size: 2.5vw;*/
+  font-size: calc(7px + 1.2vw);
   height: 35px;
-  margin-top: 5%;
+  margin-top: 3.5vh;
   line-height: 40px;
   font-weight: bold;
   text-transform: uppercase;
@@ -116,7 +121,9 @@ ul.sidebar .sidebar-list {
 }
 ul.sidebar .sidebar-list a {
   text-indent: 25px;
-  font-size: 1.1em;
+  /*font-size: 1.1em;
+  font-size: 1.5vw;*/
+  font-size: calc(7px + 0.8vw);
   color: #a6a6a6;
   line-height: 40px;
   width: 19vw;
