--- a/src/app/fixed/top-header/top-header.component.html
+++ b/src/app/fixed/top-header/top-header.component.html
@@ -4,22 +4,18 @@
 <div id="topnav">
   <nav class="navbar-default navbar navbar-fixed-top">
     <div class="container">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topnav" aria-expanded="false" aria-controls="topnav">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" aria-expanded="false" aria-controls="topnav">
+        <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button> -->
+
       <div class="navbar-header">
         <a href="#">justForex</a>
       </div>
 
-      <div class="navbar-right">
+      <div class="collapse navbar-collapse">
         <i class="fa fa-inbox" aria-hidden="true" routerLink="/chat"></i>
         <i class="fa fa-bell" aria-hidden="true" routerLink="/authentication"></i>
         <i class="fa fa-info" aria-hidden="true"></i> <!-- info -->
