--- a/src/app/fixed/top-header/top-header.component.css
+++ b/src/app/fixed/top-header/top-header.component.css
@@ -13,7 +13,7 @@
   border-bottom:none;
   border-bottom: 0.3vh solid lightgrey;
   padding-top: 3.5vh;
-  background-color: #FAFBFC;
+  background-color: var(--white);
   display: block;
 }
 
@@ -35,7 +35,6 @@
   color: #363E4D;
   font-size: 2vh;
   font-size: 2vw;
-  color: #913D88;
 }
 
 #topnav .navbar i .collapse {
@@ -44,4 +43,12 @@
 
 i:hover {
   cursor: pointer;
+}
+
+.navbar-nav {
+  float: right;
+}
+
+.collapse {
+  border: none;
 }
