--- a/src/app/fixed/top-header/top-header.component.css
+++ b/src/app/fixed/top-header/top-header.component.css
@@ -6,13 +6,17 @@
   }
 }
 
+body {
+  padding-top: 70px;
+}
+
 #topnav .navbar {
   width: 100%;
   height: 12%;
   margin-bottom: 0;
   border-bottom:none;
   border-bottom: 0.3vh solid lightgrey;
-  padding-top: 3.5vh;
+  padding-top: 1.5vh;
   background-color: var(--white);
   display: block;
 }
@@ -31,6 +35,7 @@
 }
 
 #topnav .navbar i {
+  padding-top: 2.5vh;
   margin-right: 5vw;
   color: #363E4D;
   font-size: 2vh;
