--- a/src/app/projectsFolder/myproject/myproject.component.html
+++ b/src/app/projectsFolder/myproject/myproject.component.html
@@ -1,9 +1,13 @@
 <div class="project-box">
-  <div class="container">
-    <h4><b>{{ project.name }}</b></h4>
-    <p>{{ project.language }}</p>
-    <p>Last modified: {{ project.last_edited }}</p>
-    <button class="btn btn-default">Test</button>
-    <button class="btn btn-default">View</button>
+  <div class="col-sm-3">
+    <div class="project-box panel panel-default">
+      <div class="container">
+        <h4><b>{{ project.name }}</b></h4>
+        <p>{{ project.language }}</p>
+        <p>Last modified: {{ project.last_edited }}</p>
+        <button class="btn btn-default">Test</button>
+        <button class="btn btn-default">View</button>
+      </div>
+    </div>
   </div>
 </div>
