[dg] Put editor and text into containers

--- a/src/app/projectsFolder/editor/editor.component.css
+++ b/src/app/projectsFolder/editor/editor.component.css
@@ -9,7 +9,7 @@
 .code-editor nav {
   width: 100vw;
   margin-left: -15%;
-  margin-top:-2%;
+  margin-top:0vh;
   /*border: none;*/
   /*background-color: white;
   border: 0.3px solid #e6e6e6;*/
