--- a/src/app/projectsFolder/editor/editor.component.html
+++ b/src/app/projectsFolder/editor/editor.component.html
@@ -1,4 +1,4 @@
-<div class="code-editor">
+<div class="code-editor container">
   <!-- Navbar to select language options -->
   <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,11 +25,11 @@
     </div>
   </nav>
     <!-- The ace editor -->
-    <!-- <div class="container"> -->
+    <div class="container">
       <ace-editor class="ace"
        [(text)]="text"
        #editor></ace-editor>
-    <!-- </div> -->
+    </div>
 
 
   <!-- Buttons that allow saving and running the tests -->
