--- a/src/app/users/leaderboards/leaderboards.component.html
+++ b/src/app/users/leaderboards/leaderboards.component.html
@@ -1,1 +1,2 @@
+<input #search class="search" type="text" placeholder="Search..." (keydown.enter)="onSearch(search.value)">
 <ng2-smart-table [settings]="settings" [source]="source" (userRowSelect)="onUserRowSelect($event)"></ng2-smart-table>
