added leaderboard using angular2-datatable

--- a/src/app/users/leaderboards/leaderboards.component.css
+++ b/src/app/users/leaderboards/leaderboards.component.css
@@ -1,8 +1,10 @@
-table {
-  width: 50%;
-  margin: 0 auto;
+#data td {
+  background-color: white;
+  color: var(--dark);
+  border: none;
 }
 
-th {
-  width: 40%;
+table {
+  border-collapse: separate;
+  border-spacing: 10px 5px;
 }
