--- a/src/app/users/dashboard/dashboard.component.html
+++ b/src/app/users/dashboard/dashboard.component.html
@@ -1,50 +1,10 @@
-<div class="row">
-  <div class="col-sm-3">
-    <div class="project-box panel panel-default">
-      <div class="container">
-        <h4><b>Name</b></h4>
-        <p>Lang</p>
-        <p>Last modified:</p>
-        <button class="btn btn-default">Test</button>
-        <button class="btn btn-default">View</button>
-      </div>
-    </div>
-  </div>
+<main>
 
-  <div class="col-sm-3">
-    <div class="project-box panel panel-default">
-      <div class="container">
-        <h4><b>Name</b></h4>
-        <p>Lang</p>
-        <p>Last modified:</p>
-        <button class="btn btn-default">Test</button>
-        <button class="btn btn-default">View</button>
-      </div>
-    </div>
-  </div>
+  <input id="tab1" type="radio" name="tabs" checked>
+  <label id="l1" for="tab1">Investor</label>
 
-  <div class="col-sm-3">
-    <div class="project-box panel panel-default">
-      <div class="container">
-        <h4><b>Name</b></h4>
-        <p>Lang</p>
-        <p>Last modified:</p>
-        <button class="btn btn-default">Test</button>
-        <button class="btn btn-default">View</button>
-      </div>
-    </div>
-  </div>
+  <input id="tab2" type="radio" name="tabs">
+  <label for="tab2">Developer</label>
 
-  <div class="col-sm-3">
-    <div class="project-box panel panel-default">
-      <div class="container">
-        <h4><b>Name</b></h4>
-        <p>Lang</p>
-        <p>Last modified:</p>
-        <button class="btn btn-default">Test</button>
-        <button class="btn btn-default">View</button>
-      </div>
-    </div>
-  </div>
 
-</div>
+</main>
