--- a/src/app/fixed/side-bar/side-bar.component.css
+++ b/src/app/fixed/side-bar/side-bar.component.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 #sidebar-wrapper {
-  background-color: var(--white);
+  background-color: white;
   position: fixed;
   float: left;
   margin-left: 0px;
