--- a/src/app/users/dashboard/dashboard.component.css
+++ b/src/app/users/dashboard/dashboard.component.css
@@ -1,33 +1,69 @@
-.card {
-  height: 250px;
-  margin-top: 30px;
-  background: white;
-  border-radius: 25px;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
+@import url('https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css');
+
+*, *:before, *:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.project-box {
-  width: 200px;
-  height: 100%;
-  background-color: var(--white);
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  float: left;
-  margin-left: 3%;
-  margin-top: 2%;
+input {
+  display: none;
 }
 
-/* On mouse-over, add a deeper shadow */
-.project-box:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+label {
+  display: inline-block;
+  margin: 0 0 -1px;
+  padding: 15px 25px;
+  font-weight: 600;
+  text-align: center;
+  color: #bbb;
+  border: 1px solid transparent;
 }
 
-/* Add some padding inside the card container */
-.container {
-    padding: 2px 16px;
+#l1 {
+  margin-left: 35%;
 }
 
-button {
-  background-color: var(--green);
-  color: var(--white);
-  border: none;
+label:before {
+  font-family: fontawesome;
+  font-weight: normal;
+  margin-right: 10px;
+}
+
+label[for*='2']:before { content: '\f120'; }
+label[for*='1']:before { content: '\f201' }
+
+label:hover {
+  color: #888;
+  cursor: pointer;
+}
+
+input:checked + label {
+  color: #555;
+  border: 1px solid #ddd;
+  border-top: 2px solid orange;
+  border-bottom: 1px solid #fff;
+}
+
+#tab1:checked ~ #content1,
+#tab2:checked ~ #content2,
+{
+  display: block;
+}
+
+@media screen and (max-width: 650px) {
+  label {
+    font-size: 0;
+  }
+  label:before {
+    margin: 0;
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  label {
+    padding: 15px;
+  }
 }
