--- a/src/app/users/leaderboards/leaderboards.component.html
+++ b/src/app/users/leaderboards/leaderboards.component.html
@@ -1,31 +1,60 @@
-<table class="table table-striped" [mfData]="data" #mf="mfDataTable" [mfRowsOnPage]="5">
+<table class="table table-striped borderless" [mfData]="data" #mf="mfDataTable" [mfRowsOnPage]="5">
     <thead>
     <tr>
         <th style="width: 20%">
             <mfDefaultSorter by="name">Name</mfDefaultSorter>
         </th>
-        <th style="width: 50%">
+        <th style="width: 20%">
             <mfDefaultSorter by="email">Email</mfDefaultSorter>
         </th>
-        <th style="width: 10%">
-            <mfDefaultSorter by="age">Age</mfDefaultSorter>
+        <th style="width: 20%">
+            <mfDefaultSorter by="age">Split</mfDefaultSorter>
         </th>
         <th style="width: 20%">
             <mfDefaultSorter by="city">City</mfDefaultSorter>
+        </th>
+        <th style="width: 10%">
+            <mfDefaultSorter by="city">Risk</mfDefaultSorter>
+        </th>
+        <th style="width: 10%">
+
         </th>
     </tr>
     </thead>
     <tbody>
     <tr *ngFor="let item of mf.data" id="data">
-        <td>{{item.name}}</td>
-        <td>{{item.email}}</td>
-        <td class="text-right">{{item.age}}</td>
-        <td>{{item.city | uppercase}}</td>
+        <td class="align-middle"><img src="https://cdn.dribbble.com/users/949133/screenshots/2671363/cute-05_1x.png" />{{item.name}}</td>
+        <td class="align-middle">{{item.email}}</td>
+        <td class="align-middle text-right">{{item.age}}</td>
+        <td class="align-middle">{{item.city | uppercase}}</td>
+        <td class="align-middle">{{item.city | uppercase}}</td>
+        <td class="align-middle">
+          <button class="btn btn-success"  data-toggle="modal" data-target=".bd-example-modal-lg">Invest Now</button>
+        </td>
     </tr>
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+    </div>
     </tbody>
     <tfoot>
     <tr>
-        <td colspan="4">
+        <td colspan="5">
             <mfBootstrapPaginator [rowsOnPageSet]="[5,10,25]"></mfBootstrapPaginator>
         </td>
     </tr>
