--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@ body {
   /*margin:0 auto;
   text-align:center;*/
   height: 100%;
-  background: #F6F6F6;
+  background: var(--white);
 }
 
 #loading {
