new dashboard navigation

--- a/src/app/projectsFolder/projects/projects.component.html
+++ b/src/app/projectsFolder/projects/projects.component.html
@@ -1,3 +1,11 @@
+<div class="type">
+  <input id="tab1" type="radio" name="tabs" routerLink="/">
+  <label id="l1" for="tab1">Investor</label>
+
+  <input id="tab2" type="radio" name="tabs" checked>
+  <label for="tab2">Developer</label>
+</div>
+
 <div class=all-projects>
 
     <project-box *ngFor="let project of projects"
