--- a/src/app/users/dashboard/dashboard.component.css
+++ b/src/app/users/dashboard/dashboard.component.css
@@ -1,6 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
 @import url('https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css');
 
+.type {
+  margin-top: -1.4vh;
+  position: fixed;
+  width: 100vw;
+  margin-left: -15%;
+  z-index: 10;
+  /*opacity: 0.9;*/
+  background-color: white;
+
+}
+
+.container {
+  margin-top: 8vh;
+}
+
 *, *:before, *:after {
   margin: 0;
   padding: 0;
@@ -22,7 +37,7 @@ label {
 }
 
 #l1 {
-  margin-left: 35%;
+  margin-left: 42%;
 }
 
 label:before {
@@ -66,4 +81,51 @@ input:checked + label {
   label {
     padding: 15px;
   }
+}
+
+.stats {
+  border: none;
+}
+
+/*Table to display which programmers are connected with + suggestion*/
+td {
+    background-color: white;
+    color: var(--dark);
+    height: 10vh;
+}
+
+table {
+    border-collapse: separate;
+    text-align: center;
+    border-spacing:0 1rem;
+}
+
+.borderless td, .borderless th {
+    border: none;
+}
+
+.carousel-indicators li {
+  background-color: black;
+  border: none;
+}
+/*Table to display which programmers are connected with + suggestion*/
+
+.col {
+  font-size: 40px;
+  color: white;
+  text-align: center;
+}
+
+.row {
+  margin-top: 1%;
+}
+
+img {
+  width: 100%;
+  height: 50vh;
+}
+
+.card {
+  height: 30%;
+  margin-top: 1%;
 }
