--- a/src/app/users/dashboard/dashboard.component.html
+++ b/src/app/users/dashboard/dashboard.component.html
@@ -1,10 +1,176 @@
-<main>
-
+<div class="type">
   <input id="tab1" type="radio" name="tabs" checked>
   <label id="l1" for="tab1">Investor</label>
 
-  <input id="tab2" type="radio" name="tabs">
+  <input id="tab2" type="radio" name="tabs" routerLink="/myprojects">
   <label for="tab2">Developer</label>
+</div>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active">
+          <img class="d-block img-fluid" src="http://graphic.design.umn.edu/data2/images/Unfold_GraphicBanner_908x443-01.png" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block img-fluid" src="http://graphic.design.umn.edu/data2/images/Unfold_GraphicBanner_908x443-01.png" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block img-fluid" src="http://graphic.design.umn.edu/data2/images/Unfold_GraphicBanner_908x443-01.png" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+   </div>
+  </div>
 
-</main>
+  <div class="row">
+    <div class="col-md-6">
+      <h5>CONNECTED</h5>
+      <div id="currentPlayer" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#currentPlayer" data-slide-to="0" class="active"></li>
+        <li data-target="#currentPlayer" data-slide-to="1"></li>
+        <li data-target="#currentPlayer" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active">
+          <table class="table borderless">
+            <tbody>
+              <tr>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+              </tr>
+              <tr>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="carousel-item">
+          <table class="table borderless">
+            <tbody>
+              <tr>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+              </tr>
+              <tr>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="carousel-item">
+          <table class="table borderless">
+            <tbody>
+              <tr>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+              </tr>
+              <tr>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    </div>
+
+    <div class="col-md-6">
+      <h5>SUGGESTED</h5>
+      <div id="suggestedPlayer" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#suggestedPlayer" data-slide-to="0" class="active"></li>
+        <li data-target="#suggestedPlayer" data-slide-to="1"></li>
+        <li data-target="#suggestedPlayer" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active">
+          <div class="card" style="height: 20vh; background-color: grey">
+            HI
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="card" style="height: 20vh; background-color: grey">
+            HI
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="card" style="height: 20vh; background-color: grey">
+            HI
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <div class="row col-md-12">
+    <div class="col">
+       <div class="well" style="background-color: #FFBC20">GRAPHS
+         <p>
+           blah blah blah
+         </p>
+       </div>
+     </div>
+     <div class="col">
+        <div class="well" style="background-color: #11ABFD">GRAPHS
+          <p>
+            blah blah blah
+          </p>
+        </div>
+      </div>
+      <div class="col">
+         <div class="well" style="background-color: var(--green)">GRAPHS
+           <p>
+             blah blah blah
+           </p>
+         </div>
+       </div>
+  </div>
+
+  <div class="row col-md-12">
+    <div class="well">
+      blahblah blah
+    </div>
+  </div>
+</div>
