--- a/src/app/users/leaderboards/leaderboards.component.html
+++ b/src/app/users/leaderboards/leaderboards.component.html
@@ -25,7 +25,7 @@
     <tr *ngFor="let item of mf.data" id="data">
         <td class="align-middle"><img src="https://cdn.dribbble.com/users/949133/screenshots/2671363/cute-05_1x.png" />{{item.name}}</td>
         <td class="align-middle">{{item.email}}</td>
-        <td class="align-middle text-right">{{item.age}}</td>
+        <td class="align-middle text-right">{{makeSplit(abs(item.address.geo.lng))}}</td>
         <td class="align-middle">{{item.city | uppercase}}</td>
         <td class="align-middle">{{item.city | uppercase}}</td>
         <td class="align-middle">
