moddal box + mean of communication between between users (inbox displayed as chat component)

--- a/src/app/users/chat/chat.component.html
+++ b/src/app/users/chat/chat.component.html
@@ -1,3 +1,6 @@
-<div>
-  <chat-page></chat-page>
+<div class="inbox">
+  <app-message *ngFor="let message of messages"
+    [message]="message">
+  </app-message>
+
 </div>
