--- a/src/app/users/chat/chat.component.html
+++ b/src/app/users/chat/chat.component.html
@@ -1,3 +1,6 @@
+<div class="card">
+  Hi {{numMsg}}
+</div>
 <div class="inbox">
   <app-message *ngFor="let message of messages"
     [message]="message">
