--- a/src/app/tutorials/investor-guide/investor-guide.component.html
+++ b/src/app/tutorials/investor-guide/investor-guide.component.html
@@ -7,14 +7,56 @@
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
       <div class="card">
-        Welcome to justForex! This is a platform to invest in foreign exchange in an easy, stress free way!
+        <div class="text-container">
+          <br><br>
+          Welcome to justForex! This is a platform to invest in foreign exchange in an easy, stress free way!
+          <br><br>
+          <button class="btn-info" data-toggle="collapse" data-target="#forexinfo">What is forex?
+            <span class="glyphicon glyphicon-chevron-down"></span>
+          </button>
+          <div id="forexinfo" class="collapse">
+            <ul><br>
+              <li>Algorithmic trading is using pre-programmed instructions to automatically conduct trades, based on factors including time, price and other market conditions.</li>
+              <li>The foreign exchange market (Forex), is buying and selling foreign currencies to try to make a profit. For example, if you are trading in Pounds, you could buy Euros when the Euro is weak and so has a low price, then sell them when the Euro is stronger and worth more.</li>
+            </ul>
+          </div>
+          <br><br>
+          Using algorithms to trade forex can be very profitable. However, many people don’t have the time to write algorithms themselves. Our platform connects you with developers who have the time and skills to write these algorithms, but maybe don’t have the money to invest themselves. You can choose somebody’s algorithm and, for a cut of the profits negotiated between the two of you, use it to trade forex. We take care of the hard work, you can just input the money and wait for the profits!
+          <br><br>
+          See the next page to learn about our leaderboard, the starting point for building a partnership!
+        </div>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="..." alt="Second slide">
+      <div class="card">
+        <div class="text-container">
+          <br><br>
+          The leaderboard consists of all of the algorithms performing well this week. Each looks like this. When you have chosen one, click 'make an offer'.
+          <br><br>
+          <img src="../../../../assets/images/Leaderboard-item.png" />
+          <br><br>
+          The next page will show you how an offer is made!
+        </div>
+      </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="..." alt="Third slide">
+      <div class="card">
+        <div class="text-container">
+          <br><br>
+          This is page 3!
+          <br><br>
+          <button class="btn-info" data-toggle="collapse" data-target="#forexinfo">What is forex?
+            <span class="glyphicon glyphicon-chevron-down"></span>
+          </button>
+          <div id="forexinfo" class="collapse">
+            <ul>
+              <li>Algorithmic trading is using pre-programmed instructions to automatically conduct trades, based on factors including time, price and other market conditions.</li>
+              <li>The foreign exchange market (Forex), is buying and selling foreign currencies to try to make a profit. For example, if you are trading in Pounds, you could buy Euros when the Euro is weak and so has a low price, then sell them when the Euro is stronger and worth more.</li>
+            </ul>
+          </div>
+          <br>
+        </div>
+      </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
