Made programmer guide page

--- a/src/app/tutorials/investor-guide/investor-guide.component.html
+++ b/src/app/tutorials/investor-guide/investor-guide.component.html
@@ -32,9 +32,9 @@
         <div class="text-container">
           <br><br>
           The leaderboard consists of all of the algorithms performing well this week. Each looks like this. When you have chosen one, click 'make an offer'.
-          <br><br>
-          <img src="../../../../assets/images/Leaderboard-item.png" />
-          <br><br>
+          <br>
+          <img id="leaderboard-item" src="../../../../assets/images/Leaderboard-item.png" />
+          <br>
           The next page will show you how an offer is made!
         </div>
       </div>
@@ -43,18 +43,11 @@
       <div class="card">
         <div class="text-container">
           <br><br>
-          This is page 3!
+          [Insert screenshot of offer box]
           <br><br>
-          <button class="btn-info" data-toggle="collapse" data-target="#forexinfo">What is forex?
-            <span class="glyphicon glyphicon-chevron-down"></span>
-          </button>
-          <div id="forexinfo" class="collapse">
-            <ul>
-              <li>Algorithmic trading is using pre-programmed instructions to automatically conduct trades, based on factors including time, price and other market conditions.</li>
-              <li>The foreign exchange market (Forex), is buying and selling foreign currencies to try to make a profit. For example, if you are trading in Pounds, you could buy Euros when the Euro is weak and so has a low price, then sell them when the Euro is stronger and worth more.</li>
-            </ul>
-          </div>
-          <br>
+          Here you create your offer. Enter the percentage of the profits you want take, the amount of money you want to invest, and the date you want to end the investment period. If your offer is accepted, the money will be taken from your account and, after the time period ends, your remaining money will be sent back to you along with your cut of the profits!
+          <br><br>
+          The developer may respond with a counter-offer instead of accepting. These will show up in your inbox for you to accept, decline, or respond with another counter.
         </div>
       </div>
     </div>
