--- a/src/app/tutorials/programmer-guide/programmer-guide.component.html
+++ b/src/app/tutorials/programmer-guide/programmer-guide.component.html
@@ -1,3 +1,88 @@
-<p>
-  programmer-guide works!
-</p>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <div class="card">
+        <div class="text-container">
+          <br><br>
+          Welcome to justForex! This is a platform to write and test foreign exchange trading algorithms in an easy, stress free way, and make money by getting investors to trade with your algorithms!
+          <br><br>
+          <button class="btn-info" data-toggle="collapse" data-target="#forexinfo">What is forex?
+            <span class="glyphicon glyphicon-chevron-down"></span>
+          </button>
+          <div id="forexinfo" class="collapse">
+            <ul><br>
+              <li>Algorithmic trading is using pre-programmed instructions to automatically conduct trades, based on factors including time, price and other market conditions.</li>
+              <li>The foreign exchange market (Forex), is buying and selling foreign currencies to try to make a profit. For example, if you are trading in Pounds, you could buy Euros when the Euro is weak and so has a low price, then sell them when the Euro is stronger and worth more.</li>
+            </ul>
+          </div>
+          <br><br>
+          Our site allows you to write algorithms in Python with which to trade forex, and to test the algorithms without using your own money.
+          <br><br>
+          See the next page to learn about writing an algorithm.
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="card">
+        <div class="text-container">
+          <br><br>
+          Click the 'new project' button on the dashboard to get to the editor screen.
+          <br>[picture]
+          <br>
+          Here you can click 'new file' to start a new file and write your python code. The 'run' button attempts to compile the algorithm and puts output in the terminal beneath. When finished, click 'save'. Then you can click 'run backtests' and see how well your algorithm performs!
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="card">
+        <div class="text-container">
+          <br><br>
+          [Insert screenshot of graph page with graphs labelled]
+          <br><br>
+          If your algorithm does well, it may end up on the leaderboard! That is where potential investors can find you!
+          <br><br>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="card">
+        <div class="text-container">
+          <br><br>
+          The leaderboard consists of all of the algorithms performing well this week. Each looks like this:
+          <br>
+          <img id="leaderboard-item" src="../../../../assets/images/Leaderboard-item.png" />
+          <br>
+          If an investor sees your algorithm and likes what they see, they can send you an offer.
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="card">
+        <div class="text-container">
+          Open offers show up here:
+          <br><br>
+          [Insert screenshot of inbox with an offer open and labelled]
+          <br><br>
+          You can accept it in which case the trading will begin. At the end of the time period, any profits will be split according to the split agreed upon and your cut will be credited to your account.
+          <br><br>
+          If you don't like the offer, you may respond with a counter-offer. The investor can respond with another counter and so on until one of you accepts or declines.
+        </div>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
