--- a/src/app/tutorials/tutorials.component.html
+++ b/src/app/tutorials/tutorials.component.html
@@ -1,3 +1,3 @@
 <h1>Are you a</h1>
 <button class="btn btn-default" routerLink="/investor-guide">Investor</button>
-<button class="btn btn-default">Programmer</button>
+<button class="btn btn-default" routerLink="/programmer-guide">Programmer</button>
