--- a/src/app/projectsFolder/graphs/graphs.component.html
+++ b/src/app/projectsFolder/graphs/graphs.component.html
@@ -1,33 +1,3 @@
-<!-- <div [ng2-highstocks]="bot" (click)="draw(options)"></div> -->
-<!-- <div [ng2-highstocks]="" class="graph"></div> -->
-<!-- <div [ng2-highcharts]="vot"></div>
-<div [ng2-highcharts]="wl"></div> -->
-
-<!--<div [ng2-highcharts]="ttpc"></div>-->
-<!--<div [ng2-highcharts]="stpc"></div>-->
-<!--<div [ng2-highcharts]="btpc"></div>-->
-
-<!--<p class="note">-->
-  <!--Your deployment of Angular 2 Seed worked perfectly!-->
-  <!--Click <em>about (above)</em> to get your reward!-->
-<!--</p>-->
-
-<!--<table width="100%">-->
-	<!--<tr>-->
-		<!--<td width="50%">-->
-			<!--<div [ng2-highcharts]="chartOptions" class="graph"></div>-->
-		<!--</td>-->
-		<!--<td width="50%">-->
-			<!--<div [ng2-highcharts]="chartBar" class="graph"></div>-->
-		<!--</td>-->
-	<!--</tr>-->
-	<!--<tr>-->
-		<!--<td width="50%">-->
-			<!--<div [ng2-highstocks]="chartStock" class="graph"></div>-->
-		<!--</td>-->
-	<!--</tr>-->
-<!--</table>-->
-
 <div class="container">
 	<div class="row">
 		<div class="col-sm-6 col-md-6">
@@ -50,3 +20,5 @@
 		</div>
 	</div>
 </div>
+
+<button class="btn btn-default btn-lg" (click)="sendFileBacktest('59301de19e3d5940a00128ed')">CLICK TO TEST</button>
