compile time error added below editor

--- a/src/app/projectsFolder/editor/editor.component.html
+++ b/src/app/projectsFolder/editor/editor.component.html
@@ -25,8 +25,8 @@
     </div>
   </nav>
     <!-- The ace editor -->
-    <div class="container" id="yourcode">
-      <ace-editor class="ace"
+    <div class="container">
+      <ace-editor id="editor" class="ace"
        [(text)]="text"
        #editor></ace-editor>
     </div>
@@ -34,14 +34,10 @@
 
   <!-- Buttons that allow saving and running the tests -->
 </div>
-
-<h3>Try This</h3>
 <form>
-<textarea class="col-md-12" id="yourcode" cols="40" rows="10">
-import turtle
-print "Hello World"
+<textarea id="yourcode">\
 </textarea><br />
-<button type="button" onclick="runit()">Run</button>
+<button type="button" onclick="aceToText()">Run</button>
 </form>
 <pre id="output" ></pre>
 <!-- If you want turtle graphics include a canvas -->
