dashboard: added dummy data + change styling of leaderboards

--- a/src/app/tutorials/programmer-guide/programmer-guide.component.html
+++ b/src/app/tutorials/programmer-guide/programmer-guide.component.html
@@ -13,7 +13,7 @@
           <br><br>
           Welcome to justForex! This is a platform to write and test foreign exchange trading algorithms in an easy, stress free way, and make money by getting investors to trade with your algorithms!
           <br><br>
-          <button class="btn-info" data-toggle="collapse" data-target="#forexinfo">What is forex?
+          <button class="btn btn-default btn-info" data-toggle="collapse" data-target="#forexinfo">What is forex?
             <span class="glyphicon glyphicon-chevron-down"></span>
           </button>
           <div id="forexinfo" class="collapse">
