--- a/src/app/tutorials/investor-guide/investor-guide.component.html
+++ b/src/app/tutorials/investor-guide/investor-guide.component.html
@@ -11,7 +11,7 @@
           <br><br>
           Welcome to justForex! This is a platform to invest in foreign exchange in an easy, stress free way!
           <br><br>
-          <button class="btn-info" data-toggle="collapse" data-target="#forexinfo">What is forex?
+          <button class="btn btn-default btn-info" data-toggle="collapse" data-target="#forexinfo">What is forex?
             <span class="glyphicon glyphicon-chevron-down"></span>
           </button>
           <div id="forexinfo" class="collapse">
