--- a/src/app/users/dashboard/dashboard.component.html
+++ b/src/app/users/dashboard/dashboard.component.html
@@ -17,13 +17,13 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-          <img class="d-block img-fluid" src="http://graphic.design.umn.edu/data2/images/Unfold_GraphicBanner_908x443-01.png" alt="First slide">
+          <img class="d-block img-fluid" src="../../../assets/images/graph.png" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block img-fluid" src="http://graphic.design.umn.edu/data2/images/Unfold_GraphicBanner_908x443-01.png" alt="Second slide">
+          <img class="d-block img-fluid" src="../../../assets/images/graph1.png" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block img-fluid" src="http://graphic.design.umn.edu/data2/images/Unfold_GraphicBanner_908x443-01.png" alt="Third slide">
+          <img class="d-block img-fluid" src="../../../assets/images/graph2.png" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -40,7 +40,7 @@
 
   <div class="row">
     <div class="col-md-6">
-      <h5>CONNECTED</h5>
+      <h5>OPEN INVESTMENTS</h5>
       <div id="currentPlayer" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#currentPlayer" data-slide-to="0" class="active"></li>
@@ -52,40 +52,19 @@
           <table class="table borderless">
             <tbody>
               <tr>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>Index Watcher</td>
+                <td>Maurice Yap</td>
+                <td>$12</td>
               </tr>
               <tr>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
+                <td>Reactive</td>
+                <td>Abbie Howell</td>
+                <td>$300</td>
               </tr>
               <tr>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="carousel-item">
-          <table class="table borderless">
-            <tbody>
-              <tr>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-              </tr>
-              <tr>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-              </tr>
-              <tr>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
+                <td>Index Points</td>
+                <td>Phuong Nam Do</td>
+                <td>$500</td>
               </tr>
             </tbody>
           </table>
@@ -94,19 +73,40 @@
           <table class="table borderless">
             <tbody>
               <tr>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>Index Watcher</td>
+                <td>Maurice Yap</td>
+                <td>$12</td>
               </tr>
               <tr>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
+                <td>Reactive</td>
+                <td>Abbie Howell</td>
+                <td>$300</td>
               </tr>
               <tr>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
+                <td>Index Points</td>
+                <td>Phuong Nam Do</td>
+                <td>$500</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="carousel-item">
+          <table class="table borderless">
+            <tbody>
+              <tr>
+                <td>Index Watcher</td>
+                <td>Maurice Yap</td>
+                <td>$12</td>
+              </tr>
+              <tr>
+                <td>Reactive</td>
+                <td>Abbie Howell</td>
+                <td>$300</td>
+              </tr>
+              <tr>
+                <td>Index Points</td>
+                <td>Phuong Nam Do</td>
+                <td>$500</td>
               </tr>
             </tbody>
           </table>
@@ -116,7 +116,7 @@
     </div>
 
     <div class="col-md-6">
-      <h5>SUGGESTED</h5>
+      <h5>WATCHED ALGORITHMS</h5>
       <div id="suggestedPlayer" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#suggestedPlayer" data-slide-to="0" class="active"></li>
@@ -125,19 +125,67 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-          <div class="card" style="height: 20vh; background-color: grey">
-            HI
-          </div>
+          <table class="table borderless">
+            <tbody>
+              <tr>
+                <td>Random Allocation</td>
+                <td>Dheeraj Geetala</td>
+                <td>-$200</td>
+              </tr>
+              <tr>
+                <td>Constant Ticking</td>
+                <td>Bob Guns</td>
+                <td>$10</td>
+              </tr>
+              <tr>
+                <td>Stable Slide</td>
+                <td>Jason Cri</td>
+                <td>-$1000</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
         <div class="carousel-item">
-          <div class="card" style="height: 20vh; background-color: grey">
-            HI
-          </div>
+          <table class="table borderless">
+            <tbody>
+              <tr>
+                <td>Random Allocation</td>
+                <td>Dheeraj Geetala</td>
+                <td>-$200</td>
+              </tr>
+              <tr>
+                <td>Constant Ticking</td>
+                <td>Bob Guns</td>
+                <td>$10</td>
+              </tr>
+              <tr>
+                <td>Stable Slide</td>
+                <td>Jason Cri</td>
+                <td>-$1000</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
         <div class="carousel-item">
-          <div class="card" style="height: 20vh; background-color: grey">
-            HI
-          </div>
+          <table class="table borderless">
+            <tbody>
+              <tr>
+                <td>Random Allocation</td>
+                <td>Dheeraj Geetala</td>
+                <td>-$200</td>
+              </tr>
+              <tr>
+                <td>Constant Ticking</td>
+                <td>Bob Guns</td>
+                <td>$10</td>
+              </tr>
+              <tr>
+                <td>Stable Slide</td>
+                <td>Jason Cri</td>
+                <td>-$1000</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
@@ -146,23 +194,23 @@
 
   <div class="row col-md-12">
     <div class="col">
-       <div class="well" style="background-color: #FFBC20">GRAPHS
+       <div class="well" style="background-color: #FFBC20">Lifetime Investor
          <p>
-           blah blah blah
+           £3,489
          </p>
        </div>
      </div>
      <div class="col">
-        <div class="well" style="background-color: #11ABFD">GRAPHS
+        <div class="well" style="background-color: #11ABFD">Average profit split
           <p>
-            blah blah blah
+            48:52
           </p>
         </div>
       </div>
       <div class="col">
-         <div class="well" style="background-color: var(--green)">GRAPHS
+         <div class="well" style="background-color: var(--green)">Ave profit per week
            <p>
-             blah blah blah
+             £12
            </p>
          </div>
        </div>
