--- a/src/app/projectsFolder/editor/editor.component.html
+++ b/src/app/projectsFolder/editor/editor.component.html
@@ -35,9 +35,9 @@
   <!-- Buttons that allow saving and running the tests -->
 </div>
 <form>
-<textarea id="yourcode">\
+<textarea id="yourcode">
 </textarea><br />
-<button type="button" onclick="aceToText()">Run</button>
+<button class="btn btn-default" type="button" onclick="aceToText()">Run</button>
 </form>
 <pre id="output" ></pre>
 <!-- If you want turtle graphics include a canvas -->
