[phuong][abbie] Fixes leaderboard not having header and sidebar, fixes header links

--- a/src/app/fixed/side-bar/side-bar.component.html
+++ b/src/app/fixed/side-bar/side-bar.component.html
@@ -22,7 +22,7 @@
         </li>
 
         <li class="sidebar-list">
-          <a routerLink="/tutorials">Getting Started <span class="menu-icon fa fa-graduation-cap"></span></a>
+          <a routerLink="/tutorials">Getting Started <span class="menu-icon fa fa-info"></span></a>
         </li>
 
         <li class="sidebar-list">
@@ -30,7 +30,7 @@
         </li>
 
         <li class="sidebar-list">
-          <a routerLink="/editor">Editor <span class="menu-icon fa fa-terminal"></span></a>
+          <a routerLink="/editor">About Us <span class="menu-icon fa fa-info"></span></a>
         </li>
 
       </ul>
