--- a/src/app/fixed/top-header/top-header.component.html
+++ b/src/app/fixed/top-header/top-header.component.html
@@ -13,10 +13,7 @@
         <i class="nav-link fa fa-inbox" aria-hidden="true" routerLink="/chat"></i>
       </li>
       <li class="nav-item">
-        <i class="nav-link fa fa-bell" aria-hidden="true" routerLink="/authentication"></i>
-      </li>
-      <li class="nav-item">
-        <i class="nav-link fa fa-info" aria-hidden="true"></i>
+        <i routerLink="/tutorials" class="nav-link fa fa-info" aria-hidden="true"></i>
       </li>
       <li class="nav-item">
         <i class="nav-link fa fa-cog" aria-hidden="true"></i>
