[dg] centred split data in leaderboard

--- a/src/app/users/leaderboards/leaderboards.component.html
+++ b/src/app/users/leaderboards/leaderboards.component.html
@@ -26,7 +26,7 @@
         <td class="pos align-middle">{{i + 1}}</td>
         <td class="information align-middle"><img src="https://cdn.dribbble.com/users/949133/screenshots/2671363/cute-05_1x.png" />{{item.name}}</td>
         <td class="information align-middle">{{item.email}}</td>
-        <td class="information align-middle text-right">{{makeSplit(abs(item.address.geo.lng))}}</td>
+        <td class="information align-middle">{{makeSplit(abs(item.address.geo.lng))}}</td>
         <td class="align-middle">{{item.address.city}}</td>
         <td class="align-middle">{{makeRisk(abs(item.address.geo.lat))}}</td>
         <td class="align-middle">
