[dg] implemented sorting by risk

--- a/src/app/users/leaderboards/leaderboards.component.html
+++ b/src/app/users/leaderboards/leaderboards.component.html
@@ -17,7 +17,7 @@
             <mfDefaultSorter by="city">Lifetime Returns</mfDefaultSorter>
         </th>
         <th style="width: 10%">
-            <mfDefaultSorter by="city">Risk</mfDefaultSorter>
+            <mfDefaultSorter [by]="sortByRisk">Risk</mfDefaultSorter>
         </th>
     </tr>
     </thead>
